--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password:
+  password: 123456
   socket: /var/run/mysqld/mysqld.sock
 
 development:
@@ -49,6 +49,6 @@ test:
 #
 production:
   <<: *default
-  database: task-manager-api_production
+  database: task-manager
   username: task-manager-api
   password: <%= ENV['TASK-MANAGER-API_DATABASE_PASSWORD'] %>
